fix: add paragraph spacing in hero intro and remove stale br tag
Add margin between paragraphs in the hero-intro section via CSS instead
of an inline <br> tag for proper visual separation.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -677,9 +677,13 @@ h3 {
   margin-bottom: 1.5em;
 
   p {
-    margin-bottom: 0;
+    margin-bottom: 0.75em;
     font-size: 0.96em;
     line-height: 1.7;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
